update bootstrap lib to 5.3.0, add theme selector and correct template for dark mode support

--- a/cmd/web/static/css/dashboard.css
+++ b/cmd/web/static/css/dashboard.css
@@ -34,7 +34,7 @@ body {
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  color: var(--bs-heading-color,inherit);
 }
 
 .sidebar .nav-link .feather {
@@ -58,7 +58,6 @@ body {
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
-  background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
